tdf#123401 DOCX: fix table formula AVERAGE

by adding AVERAGE function as an alternative form of MEAN,
and by converting MEAN to AVERAGE during DOCX export.

Change-Id: I691618141a67f19f5823d8a214169c15f2ac6cce