sw/source/filter/ww8/docxattributeoutput.cxx
@@ -2178,7 +2178,10 @@ void DocxAttributeOutput::CmdField_Impl( const SwTextNode* pNode, sal_Int32 nPos
                     icu::UnicodeString sInput(sToken.getStr());
                     // remove < and > around cell references, e.g. <A1> to A1, <A1:B2> to A1:B2
                     icu::RegexMatcher aMatcher("<([A-Z]{1,3}[0-9]+(:[A-Z]{1,3}[0-9]+)?)>", sInput, 0, nErr);
-                    sToken = aMatcher.replaceAll(icu::UnicodeString("$1"), nErr).getTerminatedBuffer();
+                    sInput = aMatcher.replaceAll(icu::UnicodeString("$1"), nErr);
+                    // convert MEAN to AVERAGE
+                    icu::RegexMatcher aMatcher2("\\bMEAN\\b", sInput, UREGEX_CASE_INSENSITIVE, nErr);
+                    sToken = aMatcher2.replaceAll(icu::UnicodeString("AVERAGE"), nErr).getTerminatedBuffer();
                 }
             }
 
